# sm64-pyramid-sc-finder

./: .clang-format  CMakeLists.txt  Constants.hpp  README.md  Surface.cpp  Surface.hpp  SurfaceUtils.cpp  SurfaceUtils.hpp  WallsFloors.cpp  WallsFloors.hpp  error.hpp  main.cpp  solver.cpp  solver.hpp  surface.cpp  surface.hpp  trig.cpp  trig.hpp  utils.cpp  utils.hpp  vecutil.cpp  vecutil.hpp  vmath.hpp
cmake/: compiler_settings.cmake
